# annotation

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml
data/: amazon-review-data-set.json
data/label-studio/: label_studio.sqlite3
src/data/amazon/: download.py  sample.py
