[tool.poetry]
name = "choosistant-annotation"
version = "0.1.0"
description = ""
authors = [
    "Omar Ali Sheikh <sheikhomar@users.noreply.github.com>"
]
license = "MIT"
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "^2.28.1"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[tool.flake8]
statistics=true
show-source=true
max-line-length=130
doctests=true
exclude=[
    "__pypackages__",
    ".git",
    ".vscode",
    ".mypy_cache",
    ".venv"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
